--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilos Generales */
 :root {
     --white: #ffffff ;
     --black: #000000; 
@@ -140,6 +141,42 @@ nav {
     text-decoration: none;
 }
 
+/*  Menu en mobile  */
+
+.mobile-menu {
+    position: absolute;
+    top: 40px;
+    padding: 24px;
+}
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+}
+.mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+}
+.mobile-menu ul:nth-child(1) {
+    border-bottom: 1px solid var(--very-light-pink);
+}
+.mobile-menu ul:nth-child(3) {
+    position: absolute;
+}
+.mobile-menu ul li {
+    margin-bottom: 24px;
+}
+
+
+.mobile-menu .email {
+    font-size: var(--sm);
+    font-weight: 300;
+} 
+.mobile-menu .sign-out {
+    font-size: var(--sm);
+    color: var(--palo-rosa);
+}
 
 
 @media (max-width: 640px) {
@@ -149,7 +186,14 @@ nav {
     .navbar-left ul {
         display: none;
     }
-    .navbar-email {
+    .navbar-email, .desktop-menu {
+        display: none;
+    }
+
+}
+
+@media (min-width: 641px) {
+    .mobile-menu {
         display: none;
     }
 }
