Se integro los productos a nuestra pagina principal

--- a/styles.css
+++ b/styles.css
@@ -259,6 +259,58 @@ nav {
 }
 
 
+/* Lista de Productos*/
+
+.cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 26px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    place-content: center;
+}
+
+.product-card {
+    width: 240px;
+}
+.product-card img {
+    width: 100%;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover; /* Esta propiedad le dice que la imagen se adecue al tamaño que le indicamos y no va a deformarse*/
+}
+
+.product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    margin-top: 12px;
+}
+
+.product-info figure {
+    margin: 0;
+}
+
+.product-info figure img {
+    width: 35px;
+    height: 35px;
+}
+
+.product-info div p:nth-child(1) {
+    margin-top: 0;
+    margin-bottom: 4px;
+    font-weight: bold;
+    font-size: var(--md);
+}
+
+.product-info div p:nth-child(2) {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: var(--md);
+    color: var(--very-light-pink);
+}
+
+
 @media (max-width: 640px) {
     .menu {
         display: block;
@@ -271,6 +323,18 @@ nav {
     }
     .product-detail {
         width: 100%;
+    }
+    .cards-container {
+        grid-template-columns: repeat(auto-fill, 140px);
+    }
+
+    .product-card {
+        width: 140px;
+    }
+
+    .product-card img {
+        width: 140px;
+        height: 140px; 
     }
 }
 
