--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,8 @@ nav {
 
 .mobile-menu {
     position: absolute;
-    top: 70px;
+    width: 80%;
+    top: 80px;
     padding: 24px;
     background-color: var(--white);
 }
@@ -181,7 +182,7 @@ nav {
 
 /* Shopping Car (product detail y car) */
 
-.product-detail {
+#shoppingCarContainer {
     position: absolute;
     right: 0;
     width: 360px;
@@ -258,6 +259,70 @@ nav {
     height: 50px;
 }
 
+/* Detalles del card del producto  */
+#product-detail {
+    position: absolute;
+    right: 0;
+    width: 360px;
+    padding-bottom: 24px;
+}
+.product-detail-close {
+    position: absolute;
+    z-index: 2;
+    top: 18px;
+    left: 18px;
+    width: 14px;
+    height: 14px;
+    padding: 12px;
+    background: var(--white);
+    border-radius: 50%;
+}
+.product-detail-close:hover {
+    cursor: pointer;
+}
+#product-detail > img:nth-child(2) {
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+.productDetail-info {
+    margin: 24px 24px 0 24px;
+}
+.productDetail-info p:nth-child(1) {
+    margin-top: 0;
+    margin-bottom: 4px;
+    font-weight: bold;
+    font-size: var(--md);
+}
+.productDetail-info p:nth-child(2) {
+    margin-top: 0;
+    margin-bottom: 36px;
+    font-size: var(--md);
+    color: var(--very-light-pink);
+}
+.productDetail-info p:nth-child(3) {
+    margin-top: 0;
+    margin-bottom: 36px;
+    font-size: var(--sm);
+    color: var(--very-light-pink);
+}
+.primary-button { 
+    background-color: var(--palo-rosa);
+    border-radius: 8px;
+    border: none;
+    color: var(--white);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+}
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 /* Lista de Productos*/
 
@@ -335,6 +400,10 @@ nav {
     .product-card img {
         width: 140px;
         height: 140px; 
+    }
+
+    .product-detail {
+        width: 100%;
     }
 }
 
