--- a/styles.css
+++ b/styles.css
@@ -147,8 +147,9 @@ nav {
 
 .mobile-menu {
     position: absolute;
-    width: 80%;
+    width: 90%;
     top: 80px;
+    left: 0;
     padding: 24px;
     background-color: var(--white);
 }
@@ -265,6 +266,7 @@ nav {
     right: 0;
     width: 360px;
     padding-bottom: 24px;
+    background-color: var(--white);
 }
 .product-detail-close {
     position: absolute;
@@ -337,6 +339,7 @@ nav {
 
 .product-card {
     width: 240px;
+    cursor: pointer;
 }
 .product-card img {
     width: 100%;
